Update dokumentacji API
